backEnd/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: oficina-api

  template:
    metadata:
      labels:
        app: oficina-api

    spec:
      containers:
        - name: api
          image: backend-api:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

        - name: NEW_RELIC_LICENSE_KEY
          value: "SUA_LICENSE_KEY"

        - name: NEW_RELIC_APP_NAME
          value: "oficina-api"

        - name: NEW_RELIC_DISTRIBUTED_TRACING_ENABLED
          value: "true"

        - name: NEW_RELIC_LOG
          value: "stdout"

        - name: NEW_RELIC_NO_CONFIG_FILE
          value: "true"

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
